@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

skinparam classAttributeIconSize 0

title US1010 - To Schedule a Class

class ScheduleClassUI {
}

class ScheduleClassController {
-CourseRepository courseRepository
-ClassRepository classRepository
+getTeacher()
-getCourseRepository()
-getClassRepository()
}


class ClassRepository {
  -List<SchClass> classList
  +findClass(timeStart)
  +getClassList
  +add
}

class CourseRepository {
-List<Course> courseList
+createCourse()
}

class Course {
-Name name
-String description
-int enrollLimit
}

class ClassBuilder{
  -Course course
  -Date startTime
  -Date endTime
  -int teacherID
}

ScheduleClassUI ..> ScheduleClassController

ScheduleClassController ..> ClassRepository
ScheduleClassController ..> CourseRepository

ScheduleClassController --> ClassBuilder : buildClass()
ClassBuilder --> Course

'Packages missing

@enduml